
* Unreleased
** Added
*** yaml support in portal for `:repl/reloaded` and `:dev/reloaded` aliases
*** Integrant REPL support for `:repl/reloaded` and `:dev/reloaded` aliases
*** nREPL support for `:repl/inspect`
*** `project/templates` alias for use with deps-new, providing Practialli designed project templates
*** `project/create-local` to support development of Practialli project templates
** Changed
*** remove find-deps from `:repl/reloaded` and `:dev/reloaded` aliases to avoid reload clash with add-libs dependency
*** updated `project/create` to include Practialli designed project templates as a dependency
*** Breaking: rename `:env/test` to `:test/env` (drop `:env` as qualifier)
*** Breaking: rename `:env/dev` to `:dev/env` (drop `:env` as qualifier)
*** ci: MegaLinter Java Image version v6.22.2
*** ci: setup-clojure version 10.3
*** inspect: portal version 0.38.2

* 2023-03-25
** Added
*** Add sayid related aliases with middleware `:repl/debug`, `:repl/debug-refactor`, `:repl/rebel-debug`, `:repl/rebel-debug-refactor`
*** `:lib/flowstorm` for flowstom debugger use
** Changed
*** Correct libspec for kaocha test runner (change back to strings)
*** Deprecate `:lib/sayid` as middleware should be included for sayid to function correctly with Clojure CLI
*** Add `org.clojure/tools.trace` to REPL Reloaded aliases - `:repl/reloaded`, `:dev/reloaded`
*** Update `:test/run` to fail-fast by default, mimimising test runs when there are failed tests
*** `practicalli/clojure-cli-config` repository name (changed from clojure-deps-edn)
*** `main` default branch (changed from live)
*** ci: MegaLinter Java image 6.20.1
*** ci: DeLaGuardo/setup-clojure 10.2, actions v3.5.0, clj-kondo v2023.03.17
*** ci: workflows use `main` branch
*** Update library versions using `clojure -T:search/outdated`

|                              :name |                                 :current |                                  :latest |