@@ -18,9 +18,6 @@ jobs:
         uses: actions/checkout@v3.5.0
       - run: echo "🐙 ${{ github.repository }} repository was cloned to the runner."
 
-      - name: "Version Checks"
-        uses: liquidz/antq-action@main
-
       - name: "Install tools"
         uses: DeLaGuardo/setup-clojure@10.3
         with:
