@@ -1,0 +1,39 @@
+---
+# ------------------------------------------
+# Scheduled check of versions
+# - insight as to when to push version updates
+# to Practialli Clojure CLI Config
+#
+# Using liquidz/anta to check:
+# - GitHub workflows
+# - deps.edn
+# ------------------------------------------
+
+name: "Scheduled Version Check"
+on:
+  schedule:
+    - cron: '0 4 * * *'  # at 04:04:04 ever day
+  workflow_dispatch:     # Run manually via GitHub Actions Workflow page
+
+jobs:
+  scheduled-version-check:
+    name: "Scheduled Version Check"
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo "🚀 Job automatically triggered by ${{ github.event_name }}"
+      - run: echo "🐧 Job running on ${{ runner.os }} server"
+      - run: echo "🐙 Using ${{ github.ref }} branch from ${{ github.repository }} repository"
+
+      - name: "Checkout code"
+        uses: actions/checkout@v3.5.0
+      - run: echo "🐙 ${{ github.repository }} repository was cloned to the runner."
+
+      - name: "Setup Antq"
+        uses: liquidz/antq-action@main
+
+      - name: "Antq Check versions"
+        run: antq --error-format="::error file={{file}}::{{message}}"
+
+      - run: echo "🎨 library versions checked with liquidz/antq"
+
+      - run: echo "🍏 Job status is ${{ job.status }}."
