@@ -7,6 +7,7 @@
 *** nREPL support for `:repl/inspect`
 *** `project/templates` alias for use with deps-new, providing Practialli designed project templates
 *** `project/create-local` to support development of Practialli project templates
+*** ci: antq library versions scheduled GitHub workflow
 ** Changed
 *** remove find-deps from `:repl/reloaded` and `:dev/reloaded` aliases to avoid reload clash with add-libs dependency
 *** updated `project/create` to include Practialli designed project templates as a dependency
